# claude-code-demo

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/: client_protocols.md  llm_protocols.md
projects/01-agent/: architecture.html  pyproject.toml
projects/01-agent/src/: __init__.py  cli.py  config.py  main.py
projects/01-agent/src/agent/: __init__.py  agent.py  core.py  deps.py  events.py  hooks.py  loop.py  mailbox.py  prompt.py  retry.py  teammate.py  types.py
projects/01-agent/src/clients/: client.py
projects/01-agent/src/context/: __init__.py  budget.py  compact.py  messages.py  micro.py  pipeline.py  prompt.py  (+4 more)
projects/02-complex-agent/: TODO.md  pyproject.toml
projects/02-complex-agent/src/: __init__.py  config.py  constants.py  context.py  query.py  repl.py  system_prompt.py  types.py
projects/02-complex-agent/src/api/: __init__.py  client.py  retry.py
projects/02-complex-agent/src/compact/: __init__.py  budget.py
projects/02-complex-agent/src/tools/: __init__.py  execution.py  registry.py  types.py
projects/02-complex-agent/src/tools/impl/: bash.py
src/: attachments.py  config.py  constants.py  hooks.py  main.py  planning.py  query.py  repl.py  system_prompt.py  types.py  ui.py
src/agent/: loop.py
src/agents/: __init__.py  builtin.py  types.py
src/clients/: anthropic_client.py  base.py  openai_client.py
src/compact/: auto.py  micro.py
src/tools/: __init__.py  base.py  executor.py  file_tools.py  registry.py
src/tools/impl/: __init__.py  bash.py  file.py  grep.py  subagent.py  todo.py
src/tui/: interface.py
(+38 files in other folders)
