[project]
name = "claude-code-clone"
version = "0.1.0"
description = "A terminal AI coding assistant inspired by Claude Code"
requires-python = ">=3.10"
dependencies = [
    "rich>=13.0",
    "httpx>=0.27",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "watchdog>=4.0",
]

[project.scripts]
ccc = "src.main:main"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
