[project]
name = "ccc"
version = "0.2.0"
description = "Terminal AI coding assistant — clean rewrite"
requires-python = ">=3.12"
dependencies = [
    "rich>=13.0",
    "httpx>=0.27",
    "litellm>=1.0",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
]

[project.scripts]
ccc = "src.main:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
